[gd_scene load_steps=8 format=2]

[ext_resource path="res://images/bunny2_stand.png" type="Texture" id=1]
[ext_resource path="res://scripts/attack.gd" type="Script" id=2]
[ext_resource path="res://images/bunny1_stand.png" type="Texture" id=3]
[ext_resource path="res://scripts/Hitbox.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 62, 102.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "off_um",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "on_um",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 214.597

[node name="Player" type="KinematicBody2D"]
collision_mask = 257
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "off_um"

[node name="Hitbox" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="CheckWallUp" type="RayCast2D" parent="."]
position = Vector2( 0, -50 )
enabled = true
cast_to = Vector2( 80, 0 )
collision_mask = 2

[node name="CheckWallDown" type="RayCast2D" parent="."]
position = Vector2( 0, 90 )
enabled = true
cast_to = Vector2( 80, 0 )
collision_mask = 2

[node name="CheckPlatform" type="RayCast2D" parent="."]
position = Vector2( 0, -2.5 )
enabled = true
cast_to = Vector2( 0, 120 )
collision_mask = 2
